--- a/Baseline_Reverse_Image_Search.ipynb
+++ b/Baseline_Reverse_Image_Search.ipynb
@@ -12,17 +12,6 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "bD-XkP1GN6WW"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
-      "cell_type": "code",
       "execution_count": 26,
       "metadata": {
         "colab": {
@@ -51,6 +40,15 @@
         "import tensorflow as tf\n",
         "tf.test.gpu_device_name()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Import the required libraries. Here we use tensorflow, keras, sklearn, matplot, and numpy."
+      ],
+      "metadata": {
+        "id": "oxo1YuwTxpPf"
+      }
     },
     {
       "cell_type": "code",
@@ -97,6 +95,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Grabbing the LFW dataset and preparing it for the model."
+      ],
+      "metadata": {
+        "id": "CvGIqV_lx4p-"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 28,
       "metadata": {
@@ -122,6 +129,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Defining our ResNet50 model. We remove the top layers and use a model which has been pretrained on ImageNet. Our model therefore returns a feature map and not classification probabilities."
+      ],
+      "metadata": {
+        "id": "SJLl23FZx-vJ"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 29,
       "metadata": {
@@ -132,6 +148,15 @@
         "img_size =224\n",
         "model = ResNet50(include_top=False, weights='imagenet',input_shape=(img_size, img_size, 3),pooling='max')"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now we pass the LFW dataset through our pretrained model and generate feature maps for each image in the dataset."
+      ],
+      "metadata": {
+        "id": "e4NwwhLMyjEz"
+      }
     },
     {
       "cell_type": "code",
@@ -186,6 +211,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Here we fit the KNN algorithm to the LFW features. This will allow us to then compare input images to the LFW dataset and select the most similar images based upon feature distance. We choose $k$ to be 8."
+      ],
+      "metadata": {
+        "id": "tFXW4PHdy19r"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 32,
       "metadata": {
@@ -213,6 +247,15 @@
         "                             metric='euclidean')\n",
         "neighbors.fit(feature_list)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Here we upload a test image (George W. Bush) and pass it through our model and KNN algorithm. We are then given the indices of the $k=8$ nearest neighbors."
+      ],
+      "metadata": {
+        "id": "1UU0Ep_pzEZF"
+      }
     },
     {
       "cell_type": "code",
@@ -250,6 +293,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Here we loop through the LFW dataset to find the 8 most similar images, which correspond to our indices found above."
+      ],
+      "metadata": {
+        "id": "nmrc_98xzr2t"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 34,
       "metadata": {
@@ -267,6 +319,15 @@
         "            plotnumber+=1\n",
         "    plt.tight_layout()"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Now printing the input image and the result from above"
+      ],
+      "metadata": {
+        "id": "uJCbjHWbzpmB"
+      }
     },
     {
       "cell_type": "code",
@@ -328,6 +389,15 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Next we attempt to reduce the size of our feature maps to eradicate potential noise/overfitting. "
+      ],
+      "metadata": {
+        "id": "H4t3lQarztiD"
+      }
+    },
+    {
       "cell_type": "code",
       "execution_count": 39,
       "metadata": {
@@ -367,6 +437,15 @@
         "                             algorithm='ball_tree',                               metric='euclidean')\n",
         "neighbors_pca_features.fit(compressed_features)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "However we find negligible (and even decreasing) changes in performance after this change."
+      ],
+      "metadata": {
+        "id": "0ew3je4uz1yG"
+      }
     },
     {
       "cell_type": "code",
